# sscanf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  args.h  array.cpp  array.h  data.cpp  data.h  enum.cpp  enum.h  error.cpp  error.h  kustom.cpp  makefile  pawn.json  release.bat  specifiers.cpp  specifiers.h  sscanf.cpp  sscanf.def  sscanf.h  sscanf.sln  sscanf.vcxproj  sscanf.vcxproj.filters  sscanf2.inc  utils.cpp  utils.h
.github/workflows/: build.yml
SDK/: amx.c  amx.h  amxplugin.c  plugin.h
amx/: amxplugin.c
tests/: sscanfErr.pwn  sscanfM.pwn
